# jj-pr

./: .gitignore  CONFLICTED_BOOKMARKS.md  Cargo.toml  DESIGN.md  README.md  check.bash  rustfmt.toml
.github/workflows/: ci.yml
src/: cli.rs  gh.rs  graph_algorithms.rs  jj.rs  main.rs  pr_dag.rs  style.rs  tests.rs  types.rs  ui.rs
src/fixtures/: hydro-3.json  hydro-4.json  hydro-after.json  hydro-before.json  jj-pr-ambiguous.json  jj-pr-dump-1065390.json  jj-pr.json
src/snapshots/: jj_pr__tests__base_mismatch_show.snap  jj_pr__tests__base_mismatch_sync.snap  jj_pr__tests__bookmark_name_collision_no_remote.snap  jj_pr__tests__ci_review_status_show.snap  jj_pr__tests__ci_review_status_show.snap.new  jj_pr__tests__closed_pr_hidden_log.snap  jj_pr__tests__closed_pr_hidden_show.snap  jj_pr__tests__closed_pr_visible_log.snap  jj_pr__tests__closed_pr_visible_show.snap  jj_pr__tests__closed_pr_with_open_child_log.snap  jj_pr__tests__closed_pr_with_open_child_show.snap  jj_pr__tests__conflicted_bookmark_working_copy_log.snap  jj_pr__tests__conflicted_merged_null_show.snap  jj_pr__tests__conflicted_merged_null_sync.snap  jj_pr__tests__conflicted_no_null_blocks_sync.snap  jj_pr__tests__conflicted_open_log.snap  jj_pr__tests__conflicted_open_show.snap  jj_pr__tests__conflicted_working_copy_show.snap  jj_pr__tests__create_already_exists.snap  jj_pr__tests__create_conflicted_bookmark.snap  jj_pr__tests__create_intermediate_pr.snap  jj_pr__tests__create_intermediate_pr_show.snap  jj_pr__tests__create_intermediate_pr_sync_after.snap  jj_pr__tests__create_new_pr.snap  jj_pr__tests__create_stacked_pr.snap  jj_pr__tests__current_change_log.snap  jj_pr__tests__current_change_show.snap  jj_pr__tests__diamond_ambiguous_log.snap  jj_pr__tests__diamond_ambiguous_show.snap  jj_pr__tests__empty_and_no_description_log.snap  jj_pr__tests__foreign_pr_collision_show.snap  jj_pr__tests__log-all@cargo-smart-release-73.json.gz.snap  jj_pr__tests__log-all@hydro-3.json.gz.snap  (+154 more)
