[package]
name = "jj-pr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jj-pr"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ref-cast = "1.0.11"
sapling-renderdag = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
flate2 = "1.1.1"
insta = { version = "1.47.2", features = ["json", "glob"] }
tracing-test = "0.2"

[lints.rust]
impl_trait_overcaptures = "warn"
missing_unsafe_on_extern = "deny"
unsafe_attr_outside_unsafe = "deny"
unused_qualifications = "warn"

[lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_into_iter_loop = "warn"
let_and_return = "allow"
manual_is_variant_and = "warn"
manual_let_else = "warn"
redundant_clone = "warn"
self_named_module_files = "warn"
single_match_else = "warn"
str_to_string = "warn"
try_err = "warn"
uninlined_format_args = "allow"
unused_async = "warn"
